[package]
name = "nano-geyser-gprc-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "~1.14.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
solana-ledger = "~1.16.0"
solana-sdk =  "~1.16.0"
nano-geyser = {path = "../proto"}