[package]
name = "nano-geyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "~1.14.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
crossbeam-channel = "0.5.8"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.9.2"
solana-ledger = "~1.14.18"
solana-sdk =  "~1.14.18"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"