[package]
name = "nano-geyser-grpc"
version = "0.1.0"
license = "Apache-2.0"
authors = ["harsh4786 <hp80738@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
futures-util = "0.3.25"
prost = "0.11.6"
prost-types = "0.11.6"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0"
solana-geyser-plugin-interface = "~1.15.0"
nano-geyser = {path = "../proto"}

thiserror = "1.0.37"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.8.3"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }


















[build-dependencies]
tonic-build = "0.8.4"